--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/assets/img/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="title" content="Portfolio Primananda Andhika" />
+		<meta name="title" content="Portfolio Alejandro Xavier" />
 		<meta
 			name="description"
-			content="This is a personal portfolio project that made by Primananda Andhika. He is a Junior Web Developer and still at Junior High School"
+			content="Esto es el portfolio personal de Alejandro Xavier que es un desarrollador web junior "
 		/>
-		<title>Primananda Andhika</title>
+		<title>Alejandro's portfolio</title>
 		<link rel="preload" as="image" href="/assets/img/programmer.webp" />
 	</head>
 	<body>
